editor/elements.css
/* Popup */
.popup {
	position: fixed;
	z-index: 100;
	width: 500px;
	height: 500px;
	top: 50%;
	left: 50%;
	margin-top: -250px;
	margin-left: -250px;
	background: #ffffff;
	overflow: auto;
}

/* Form */
.form {
	text-align: center;
    position: relative;
	z-index: -1;
}
.form form li {
	list-style-type: none;
}
.form label {
	width: 30%;
	margin: 10px;
	display: inline-block;
}
.form input {
    padding: 10px 15px 10px 15px;
    margin: 3px;
    width: 90%;
}
.form input[type="submit"] {
	padding: 10px;
    margin: 10px;
    font-size: 26px;
    width: 90%;
}

/* List */
.list > img {
	float: left;
	margin: 15px;
}

/* Image */
.image > img {
	width: 100%;
}

/* Icon */
.icon {
	text-align: center;
}

/* Video */
/*.video > iframe {
	width: 100%;
}*/


/* Menu */
.menu ul {
	margin: 0px;
	padding: 0px;
}
.menu li {
	float: left;
	margin: 10px;
	list-style-type: none;
}

/* slider */
.slider {
    position: relative;
}
.slider .slidesjs-pagination {
	position: relative;
	left: 50%;
	bottom: 30px;
	list-style-type: none;
    margin-left: -70px;
}
.slider .slidesjs-pagination-item {
	float: left;
	margin: 5px;
	border-radius: 15px;
	border: 2px solid #333;
    width: 10px;
    height: 10px;
    overflow: hidden;
}
.slider .slidesjs-pagination-item:hover {
	background: #9E2020;
	border: 2px solid #9E2020;
}
.slider .slidesjs-pagination-item a {
	color: rgba(0, 0, 0, 0);
}
.slider .slidesjs-pagination-item a.active {
	background: #333;
	font-size: larger;
}
@font-face{
  font-family:'FontAwesome';
  src:url('http://slidesjs.com/font/fontawesome-webfont.eot?v=3.0.1');
  src:url('http://slidesjs.com/font/fontawesome-webfont.eot?#iefix&v=3.0.1') format('embedded-opentype'),
  url('http://slidesjs.com/font/fontawesome-webfont.woff?v=3.0.1') format('woff'),
  url('http://slidesjs.com/font/fontawesome-webfont.ttf?v=3.0.1') format('truetype');
  font-weight:normal;
  font-style:normal 
}
.slider .slidesjs-previous,
.slider .slidesjs-next {
	position: absolute;
	margin-top: -80px;
	font-family: FontAwesome;
	font-weight: normal;
	font-style: normal;
	text-decoration: inherit;	
    font-size: 0px;
	color: #000;
    z-index: 100;
}
.slider .slidesjs-previous {	
	left: 0px;
	top: 50%;	
}
.slider .slidesjs-next {
	right: 0px;
	top: 50%;
}
.slidesjs-previous:before {
	content: "\f053";
	font-size: 70px;
}
.slidesjs-next:before {
	content: "\f054";
	font-size: 70px;
}
.slider > .slidesjs-container > .slidesjs-control > .element.slidesjs-slide {
	width: 94% !important;
}


/* Call */
.call {
    text-align: center;
}
.call button {
    padding: 10px;
    margin: 10px;
    font-size: 26px;
    width: 90%;
}

/* Timer */
.timer {
    margin: 0;
    margin-bottom: 20px;
    padding: 0;
    width: 480px;
}
.timer .cntSeparator {
    font-size: 40px;
    margin-top: 10px;
    color: #000;
}
.timer .cntSeparator:nth-last-child(9):before {
    content: "Дни";
    font-family: Arial;
    width: 70px;
    font-size: 13px;
    font-weight: bold;
    color: #000;
    position: absolute;
    z-index: 100;
	margin-top: 70px;
	margin-left: -100px;
}
.timer .cntSeparator:nth-last-child(6):before {
    content: "Часы";
    font-family: Arial;
    width: 70px;
    font-size: 13px;
    font-weight: bold;
    color: #000;
    position: absolute;
    z-index: 100;
	margin-top: 70px;
	margin-left: -100px;
}
.timer .cntSeparator:nth-last-child(3):before {
    content: "Минуты";
    font-family: Arial;
    width: 70px;
    font-size: 13px;
    font-weight: bold;
    color: #000;
    position: absolute;
    z-index: 100;
	margin-top: 70px;
	margin-left: -100px;
}
.timer .cntSeparator:nth-last-child(3):after {
    content: "Секунды";
    font-family: Arial;
    width: 70px;
    font-size: 13px;
    font-weight: bold;
    color: #000;
    position: absolute;
    z-index: 100;
	margin-top: 70px;
	margin-left: 5px;
}

